// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Textarea > renders default state 1`] = `
<DocumentFragment>
  <textarea
    class="flex min-h-[80px] w-full rounded-md border border-input bg-background px-3 py-2 text-base ring-offset-background placeholder:text-muted-foreground focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50 md:text-sm"
  />
</DocumentFragment>
`;

exports[`Textarea > renders disabled state 1`] = `
<DocumentFragment>
  <textarea
    class="flex min-h-[80px] w-full rounded-md border border-input bg-background px-3 py-2 text-base ring-offset-background placeholder:text-muted-foreground focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50 md:text-sm"
    disabled=""
  />
</DocumentFragment>
`;

exports[`Textarea > renders with placeholder 1`] = `
<DocumentFragment>
  <textarea
    class="flex min-h-[80px] w-full rounded-md border border-input bg-background px-3 py-2 text-base ring-offset-background placeholder:text-muted-foreground focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50 md:text-sm"
    placeholder="Enter your message..."
  />
</DocumentFragment>
`;

exports[`Textarea > renders with rows attribute 1`] = `
<DocumentFragment>
  <textarea
    class="flex min-h-[80px] w-full rounded-md border border-input bg-background px-3 py-2 text-base ring-offset-background placeholder:text-muted-foreground focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50 md:text-sm"
    rows="5"
  />
</DocumentFragment>
`;
